--- a/flink/pom.xml
+++ b/flink/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>flink-scala_2.11</artifactId>
             <version>1.7.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-cep-scala_2.11</artifactId>
+            <version>1.7.2</version>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>org.apache.flink</groupId>-->
             <!--<artifactId>flink-streaming-scala_2.11</artifactId>-->
